--- a/index.html
+++ b/index.html
@@ -193,8 +193,14 @@
         <img src="pinkearrings.jpg" alt="Clay Earrings">
         <h2>Pink Floral Earrings</h2>
         <p>PKR 399</p>
-        <button onclick="addToCart('Pearl Buds Earrings', 399)">Add to Cart</button>
+        <button onclick="addToCart('Pink Floral Earrings', 399)">Add to Cart</button>
       </div>
+	  <div class="product">
+	    <img src="bluestud.jpg" alt="Clay Earrings">
+	    <h2>Rose Drop Studs</h2>
+	    <p>PKR 299</p>
+	    <button onclick="addToCart('Rose Drop Studs', 299)">Add to Cart</button>
+	   </div>
     </div>
   </div>
 
@@ -227,7 +233,20 @@
       </div>
     </div>
   </div>
-
+  
+  <div class="section">
+    <h2>Hijab Pins</h2>
+    <div class="container">
+      <div class="product">
+        <img src="pin.jpg" alt="Bracelet">
+        <h2>Flower Hijab Pin</h2>
+        <p>PKR 49-small
+		PKR 79-big</p>
+        <button onclick="addToCart('Flower Hijab Pin', small-49, big-79)">Add to Cart</button>
+      </div>
+    </div>
+  </div>
+  
   <div class="form-section">
     <h2>Contact Us</h2>
     <form>
