--- a/index.html
+++ b/index.html
@@ -234,18 +234,24 @@
     </div>
   </div>
   
-  <div class="section">
-    <h2>Hijab Pins</h2>
-    <div class="container">
-      <div class="product">
-        <img src="pin.jpg" alt="Bracelet">
-        <h2>Flower Hijab Pin</h2>
-        <p>PKR 49-small
-		PKR 79-big</p>
-        <button onclick="addToCart('Flower Hijab Pin', small-49, big-79)">Add to Cart</button>
-      </div>
+<div class="section">
+  <h2>Hijab Pins</h2>
+  <div class="container">
+    <div class="product">
+      <img src="pin.jpg" alt="Hijab Pin">
+      <h2>Flower Hijab Pin</h2>
+      <p>
+        <label for="pinSize">Choose Size:</label><br>
+        <select id="pinSize">
+          <option value="49">Small - PKR 49</option>
+          <option value="79">Big - PKR 79</option>
+        </select>
+      </p>
+      <button onclick="addHijabPinToCart()">Add to Cart</button>
     </div>
   </div>
+</div>
+
   
   <div class="form-section">
     <h2>Contact Us</h2>
@@ -262,28 +268,60 @@
   </div>
 
   <script>
-    const cartItems = [];
+  const cartItems = [];
 
-    function addToCart(name, price) {
-      cartItems.push({ name, price });
-      renderCart();
-    }
+  function addToCart(name, price) {
+    cartItems.push({ name, price });
+    renderCart();
+  }
 
-    function renderCart() {
-      const cartContainer = document.getElementById('cart-items');
-      cartContainer.innerHTML = '';
-      cartItems.forEach(item => {
-        const div = document.createElement('div');
-        div.textContent = `${item.name} - PKR ${item.price}`;
-        cartContainer.appendChild(div);
-      });
-    }
+  function renderCart() {
+  const cartContainer = document.getElementById('cart-items');
+  cartContainer.innerHTML = '';
+  cartItems.forEach((item, index) => {
+    const itemDiv = document.createElement('div');
+    itemDiv.style.display = 'flex';
+    itemDiv.style.justifyContent = 'space-between';
+    itemDiv.style.alignItems = 'center';
+    itemDiv.style.marginBottom = '8px';
 
-    function checkout() {
-      const message = cartItems.map(item => `${item.name} - PKR ${item.price}`).join('%0A');
-      const whatsappUrl = `https://wa.me/923340032366?text=I%20want%20to%20order:%0A${message}`;
-      window.open(whatsappUrl, '_blank');
-    }
+    const textSpan = document.createElement('span');
+    textSpan.textContent = `${item.name} - PKR ${item.price}`;
+
+    const removeBtn = document.createElement('button');
+    removeBtn.textContent = '❌';
+    removeBtn.onclick = () => removeFromCart(index);
+    removeBtn.style.background = 'transparent';
+    removeBtn.style.color = 'red';
+    removeBtn.style.border = 'none';
+    removeBtn.style.cursor = 'pointer';
+    removeBtn.style.fontSize = '16px';
+
+    itemDiv.appendChild(textSpan);
+    itemDiv.appendChild(removeBtn);
+    cartContainer.appendChild(itemDiv);
+  });
+}
+
+
+  function removeFromCart(index) {
+    cartItems.splice(index, 1);
+    renderCart();
+  }
+
+  function checkout() {
+    const message = cartItems.map(item => `${item.name} - PKR ${item.price}`).join('%0A');
+    const whatsappUrl = `https://wa.me/923340032366?text=I%20want%20to%20order:%0A${message}`;
+    window.open(whatsappUrl, '_blank');
+  }
+
+  function addHijabPinToCart() {
+    const sizeElement = document.getElementById('pinSize');
+    const price = parseInt(sizeElement.value);
+    const sizeText = sizeElement.options[sizeElement.selectedIndex].text;
+    const sizeLabel = sizeText.split(' - ')[0];
+    addToCart(`Flower Hijab Pin - ${sizeLabel}`, price);
+  }
   </script>
 </body>
 </html>
